# statistical-learning-msc

./: README.md  cifar10.ipynb  cifar10_binary.ipynb  cifar10_multiclass.ipynb  data_preprocessing_utils.py  mnist_multiclass.ipynb  model_training_utils.py  pyproject.toml  statistical-learning.code-workspace  svm.py  utils.py
