[tool.poetry]
name = "statistical learning - svm"
version = "0.1.0"
description = "1st assignment for statistical learning course"
authors = ["Sotirios Moschos <sotiriosmos@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.11"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
cvxopt = "^1.3.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
